Changes for issue 17-1

--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -16,27 +16,21 @@
 
 \vspace{12pt}
 
-In this issue we are recognizing the completion of a very important step in the
-restoration of the North Star, namely, its Merlin engines, and our members who
-have volunteered with CASM to carry out the necessary work.  This is a very
-informative issue and I am sure we will all learn a great deal. I was not
-aware, until putting this edition together, that the Merlin designation was in
-keeping with the custom of Rolls Royce to name its aircraft engines after birds
-of prey. 
+Unfortunately COVID-19 and its restrictions continue to hamper the restoration
+of the North Star. So it's a good time to look at what has been accomplished to
+date by the restoration team which consists of both Museum staff and volunteers.
+This edition will continue the focus on the Merlin engines. As many of you know
+many of the volunteers are also members of our organization.
 
-The article, "Four Merlins" provides the reader with a detailed history of the
-restoration of these engines.   Due to its length, the article will be divided
-into two editions;  starting with engines number one and two in this edition;
-and three and four in the next edition. We are fortunate to have members who
-have had  lengthy involvement with this part of the project. Sadly one of those
-members passed away recently. Inside you will find a tribute to Tim Timmins by
-the President of our Association.
+You will find photos of some of those volunteers in the technical article on
+engines three and four. You will also find a interview with Garry Dupont who has
+had a leading role in the engine shop work.
 
-We look forward to receiving your comments and suggestions regarding this
-edition and for future editions whether good, bad or ugly. Please use my email
-address located on the back page.
+In the next edition we expect to have more articles about our members
+experiences in the restoration project.
 
-Good reading.
+In the meantime if you have any comments on this edition or suggestions for
+future editions please send them to me.
 
 \vspace{12pt}
 
