--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -4,387 +4,380 @@
 
 % Head
 
-\title{The Four Merlins: The First Two}
+\title{The Four Merlins: The Second Two}
 %\subtitle{Part 4}
-\author{Bruce Gemmill}
+\author{Based on Bruce Gemmill's notes; reviewed by Garry Dupont, and with editing assistance from Richard Lodge}
 
 \maketitle
 
-When North Star 17515 was retired from service with the RCAF, it was delivered
-to the National Aviation Collection at Rockcliffe  in 1966, where it sat
-exposed to the elements for many years. When a volunteer group was formed in
-2001 to restore the aircraft, the priority was to move the aircraft inside the
-newly constructed Reserve Hangar to prevent further deterioration.  This was
-accomplished on August 11, 2005 when the North Star was moved inside for the
-first time.
+% \paragraph*{Engine 3}
+
+After its removal in the Spring of 2012, engine \#3 was completely stripped of
+all accessories, pipes and hoses, and disassembled.  The block, cylinders and
+pistons were cleaned, and work was begun to reassemble this engine.  It was at
+this point that a lack of volunteers started to slow down the restoration
+process.
+
+The engine rebuild was nearing completion by April 2013, with magnetos and a few
+other accessories left to be installed.  The basic engine frame was back
+together.  The three radiator sections were cleaned and painted, then attached
+to the front of the frame.  The rear cowl ring had been disassembled, and new
+mounting hardware was fitted before the parts were painted and reassembled.  The
+front cowl assembly (radiator cover) was also cleaned, repaired and polished,
+ready to be installed.  Other cowl panels were then cleaned, repaired and
+polished, ready to install once the complete engine was in place.  Work was also
+underway on a host of pipes, cables, accessories, and fittings needed to
+complete the assembly of the engine and the Quick Engine Change (QEC) prior to
+installation on the aircraft.
+
+By September 2013 engine \#3 was almost completely reassembled, with only the
+supercharger and inter cooler preheat assemblies left to install on the engine,
+which had been moved to the QEC engine frame in early summer.  The work slowed,
+due to summer down time for staff and volunteers. The auxiliary gearbox was
+removed from the engine firewall and was then being disassembled.  This was the
+last major assembly that had to be overhauled before the engine could be placed
+back on the aircraft.
+
+Engine \#3 was nearing completion by December 2013. The supercharger and inter
+cooler preheat assemblies had been installed, along with the propeller reduction
+gearbox.  While this work was being carried out by the engine crew, the
+remainder of the volunteer workforce busied themselves completing the numerous
+cowl panels, pipes, hose and other pieces needed to complete the engine.  Two
+items that seemed to take forever were the large steel exhaust shrouds.  A lot
+of hammering was needed to pound out years of dents, then numerous rivets and
+all the Dzus fasteners and springs needed to be replaced.  The complex shape of
+the exhaust shroud made this challenging work.  Further delaying completion was
+the search for suitable clear coat to protect the steel from corrosion.  The old
+clear coat used successfully on engines \#1 and \#2 was no longer available.  A
+suitable replacement was located, the shrouds were clear coated and serial
+numbers were stenciled on.
+
+The auxiliary gearbox was disassembled, and significant corrosion was found on
+the bearings inside.  Bearings had to be ordered from England.  Meanwhile, the
+gearbox was cleaned and painted.  At the same time the large DC generator was
+dismantled, repainted and reassembled, as well as the air pump, and the
+tachometer generator and propeller synchronizer.  Once the new bearings were
+installed, the gearbox was completed, and the generator, and air pump were
+attached.  Finally, the gearbox was installed on the firewall awaiting the
+installation of the engine.
+
+In April 2013 \#3 engine frame was completed after the installation of the engine
+and supercharger.  Fitting the many cowl panels proved difficult, due to the
+extensive rework that many of these items went through, causing some alignment
+difficulties when fitting these panels onto the engine frame.  This work was
+done in July 2014, and the completed engine was successfully installed on the
+aircraft.
 
 \begin{figure}[H]
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{four-merlins-1.png}
+   \includegraphics[scale=0.5]{img-1-merlins-aug2021.png}
    %caption of the figure 
-   \caption*{\small \em North Star being moved inside hangar 11 August 2005 .}
+   \caption*{\small \em Volunteers Bill Tate and Garry Dupont discussing work on Engine 3.}
    %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
+   \label{fig:img1}
 \end{figure}
 
-The restoration project attracted many aviation enthusiasts and the early group
-of volunteers were eager to work on restoring the four Rolls Royce engines. The
-Canada Aviation Museum (as it was then called) agreed and set this as the top
-priority for the volunteers.  Work started in earnest in 2006 under the
-supervision of the Museum's Project Coordinator, Mike Irvin.
+% \paragraph*{Engine 4}
 
-This is the detailed  history of the restoration work on the first two Merlin
-engines.
+The last engine to undergo restoration was removed iand work
+immediately began in the Engine Shop to disassemble the engine.  All cowl
+panels, pipes, hoses and accessories were removed and stored until space was
+available to restore these items. The engine was moved to the yellow rotating
+stand at this point. The priority was to disassemble the engine.]. The crank
+case was cleaned and clear coated before installing back into the yellow stand.
+The refurbished crankshaft was installed in the engine block, and the connecting
+rods and pistons cleaned and polished. On this engine we were able to remove the
+propeller shaft from the reduction gear box, unlike engine \#3 the shaft could
+not be removed.  Work was then begun on the more complex cylinder heads and
+valve train assemblies.
 
-\paragraph*{Engine 1}\
+Work then proceeded on much of the ancillary equipment for the engine. Once the
+frame was completed and placed on the blue stand, the engine block was removed
+from the yellow stand and installed in the frame. The supercharger \& inter
+cooler were completed and installed, as well as the reduction gearbox. The
+radiators and header tank were restored and painted, and two of the three
+radiator sections were installed. Restoration work was then begun on the air
+intake system, and many of the fuel and oil lines.  The starter motor was found
+to be very corroded and disassembly and repair not viable. A replacement unit
+was located and installed. The fire suppression lines were complete and would be
+installed along with the cowls when ready. Some of the cowl panels were
+restored, although it was found that this engine had more corrosion than the
+other three engines. Possibly it had been in service longer.  This meant that
+more work was required to refurbish each of the many panels.
 
-The removal, restoration and assembly of Engine Nr 1 began in June 2006 and was
-completed in Feb 2010 with the installation of the engine back on the North
-Star.  This work included a complete teardown and re-assembly of all major
-components including the Merlin V12 engine, propeller, supercharger,
-intercooler and auxiliary gearbox, as well as the engine frame, cowlings,
-radiators, pipes and accessories. 
+After restarting work on the aircraft in late January 2018, the conservation
+effort focused on the completion of engine number \#4 accessories and cowl
+panels.   Many of the cowl panels required extensive repairs, including making
+many new panel stiffeners, since the old ones were often badly corroded.
+Besides painting and polishing, the refurbished panels also required new part
+number and serial number stencils, and this led to investigating missing
+stencils from the same panels on earlier engines.  
 
-Before the engine could be removed, the propeller and spinner cover needed to
-be removed.  The spinners were popular nesting sites for birds, and the bird
-droppings had caused extensive corrosion to the propeller hub.  To remove the
-hub, a large wrench was fabricated to fit over the large, threaded ring that
-held the hub firmly in place.  This was struck repeatedly with a 5 lb sledge
-hammer before the ring began to move.  This process was repeated each time a
-propeller was removed.  The propeller was then disassembled and sent to Hope
-Aero in Mississauga, Ontario for restoration.
+Before final assembly could take place, the radiator cowl panel had to be fitted
+which was done by December. The panels were fitted and installed with some
+fasteners being replaced. The front support was installed for transportation.
 
-Engine 1 was removed and mounted in a mobile assembly stand and moved to the
-conservation shop for inspection disassembly. Since this was the first Merlin
-engine any of the volunteers had worked on, much time was taken photographing
-the engine from all angles, and studying the Repair and Overhaul manuals that
-the RCAF and Rolls Royce had provided.  The digital photographs were also an
-important conservation record for the museum.
+\begin{figure}[H]
+    \vspace{2em}
+    \centering
+    %name of the graphic, without the path AND in EPS format:
+    \includegraphics[scale=0.5]{img-2-merlins-aug2021.png}
+    %caption of the figure 
+    \caption*{\small \em Engine 4 completed and ready to be moved to the Storage Hangar.}
+    %label of the figure, which has to correspond to \ref{}:
+    \label{fig:img2}
+ \end{figure}
 
-Each engine is contained within a Quick Engine Change (QEC) assembly or power
-pack. This consisted of a rigid frame to hold the cowl panels which surround
-the engine, and also hold such vital parts as the two radiator flaps, the three
-piece radiator itself, and support the fire suppression system and various
-pipes and hoses.  This frame also holds the four attachment points to secure
-the engine assembly to the aircraft.
+ \begin{figure}[H]
+    \vspace{2em}
+    \centering
+    %name of the graphic, without the path AND in EPS format:
+    \includegraphics[scale=0.5]{img-3-merlins-aug2021.png}
+    %caption of the figure 
+    \caption*{\small \em Some of the crew who worked on the restoration of Engine 4 (Richard Lodge, R\'{e}j Demers, Garry DuPont, Ted Devey, Charles Baril).}
+    %label of the figure, which has to correspond to \ref{}:
+    \label{fig:img3}
+ \end{figure}
 
-The cowl panels were removed, along with the support frame, to expose the
-engine.  Large amounts of nesting material were removed, even though museum
-staff had attempted to "bird-proof" the aircraft while outside.  Old engine oil
-was drained from the crankcase, and the volunteers began familiarizing
-themselves with the numerous parts of the wonderful V-12 Merlin engine they
-would work on for the next four years. 
+On December 19, 2019, the engine, still on its blue stand, was towed by the
+Museum forklift, from the Restoration Shop to the Storage Hangar where it now
+sits next to the North Star prior to re-installation on the aircraft.
 
-Along with learning the intricacies of the Merlin, a substantial number of
-special tools and jigs needed to be found or made.  This began with a full set
-of British sockets and wrenches for the Whitworth and BA nuts and bolts used
-throughout the engine.
+\begin{figure}[H]
+    \vspace{2em}
+    \centering
+    %name of the graphic, without the path AND in EPS format:
+    \includegraphics[scale=0.5]{img-4-merlins-aug2021.png}
+    %caption of the figure 
+    \caption*{\small \em R\'{e}j Demers (Museum Special Projects Manager) very carefully bringing the Museum forklift to lift one end of Engine 4 ready for moving from the Engine Shop to the Storage Hangar on 13 December 2019.}
+    %label of the figure, which has to correspond to \ref{}:
+    \label{fig:img4}
+ \end{figure}
 
-When it came time to remove the cylinder head, the volunteers found the pistons
-were seized in place. To free up the pistons, large amounts of penetrating oil
-was applied, then each piston struck with a large sledge hammer and block of
-wood.
+ \begin{figure}[H]
+    \vspace{2em}
+    \centering
+    %name of the graphic, without the path AND in EPS format:
+    \includegraphics[scale=0.5]{img-5-merlins-aug2021.png}
+    %caption of the figure 
+    \caption*{\small \em Engine 4 starts it long, slow, cold 20 minute journey from the Engine Shop to the Storage Hanger to join the North Star aircraft.}
+    %label of the figure, which has to correspond to \ref{}:
+    \label{fig:img5}
+ \end{figure}
+ 
+ \begin{figure}[H]
+    \vspace{2em}
+    \centering
+    %name of the graphic, without the path AND in EPS format:
+    \includegraphics[scale=0.5]{img-6-merlins-aug2021.png}
+    %caption of the figure 
+    \caption*{\small \em The Museum’s forklift, driven with great skill by  R\'{e}j Demers, hauls Engine 4 towards the Storage Hangar.  The blue engine stand and its tiny wheels certainly was not made for racing!}
+    %label of the figure, which has to correspond to \ref{}:
+    \label{fig:img6}
+ \end{figure}
 
-While this work was going on at the museum, Hope Aerospace in Mississauga was
-restoring the first of the four Hamilton propellers sent to them under
-contract. The first propeller was returned from Hope Aero after restoration in
-2008, and Mike Hope volunteered his time to help assemble it.   
-
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{four-merlins-2.png}
-   %caption of the figure 
-   \caption*{\small \em  Mike Hope and Bruce Gemmill assembled Prop 1ready to
-install on Engine 1 October 26, 2008.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
-
-By early 2009, most of the main engine components had been cleaned, and painted
-or polished, ready to be assembled on the completed engine block and cylinder
-banks one and two.
-
-Reassembly took place on the rotary engine stand, which aided installation of
-the crankshaft and other lower engine components. Below is a photo of the
-nearly completed engine, showing the cylinder heads and spark plug cables in
-place, before moving to the mobile engine stand for final assembly. Note the
-highly polished brass expansion tank for the main radiator, nestled behind the
-propeller cowl.
-
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.55]{four-merlins-3.png}
-   %caption of the figure 
-   \caption*{\small \em Engine 1 assembled in the Conservation shop Feb 2,
-2010.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
-
-Once the engine was moved to the assembly stand where the engine frame and
-large radiator awaited, the wiring and various pipes and hoses could be fitted,
-along with the already assembled wheelcase and supercharger. Lowering this very
-large assembly into the tight space at the rear of the engine was a very
-delicate manoeuvre, but the reward was a nearly completed Merlin!
-
-After installing the massive air intake and intercooler, the various cowl
-panels were fitted to the outside of the engine frame, to complete the QEC
-assembly.
-
-While this work was going on, final preparations were being made at the
-aircraft to receive Engine 1.  This required cleaning and polishing the
-firewall and various engine fittings, and installing the auxiliary gearbox that
-drives the electrical generator and other accessories on the engine.
-
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.55]{four-merlins-4.png}
-   %caption of the figure 
-   \caption*{\small \em Firewall ready, auxiliary gearbox installed Jan 7,
-2010.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
+2020 Finally early in 2020, before the lock down,  propeller \#4 was assembled
+and stored on the refurbished prop stand in the Storage Hangar ready to mount on
+engine \#4. 
 
 
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.55]{four-merlins-5.png}
-   %caption of the figure 
-   \caption*{\small \em Engine 1 complete at the Restoration Shop Feb 9, 2010
-.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.45]{four-merlins-6.png}
-   %caption of the figure 
-   \caption*{\small \em Engine 1 installed Feb 24, 2010. Shown top left to
-bottom right, engine
-supervisor Ted Devey,  Bill Tate, Ron Lemieux, Giuseppe Zanetti, John Corby,
-Garnet Chapman, Volunteer Project Manager Jim Riddoch, John Tasseron, Bruce
-Gemmill, Museum Project Coordinator Mike Irvin, Charles Baril, and then
-Association President Tim Timmins.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
+% \begin{figure}[H]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.5]{four-merlins-1.png}
+%    %caption of the figure 
+%    \caption*{\small \em North Star being moved inside hangar 11 August 2005 .}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
 
-The engine was reinstalled on February 24, 2010 and the crew could take a short
-break before beginning work on engine 2.
 
-\paragraph*{Engine 2}\
 
-Work started on the removal of Engine 2 in early April, beginning with removal
-of all the cowl panels, draining any fluids left in the engine and radiators,
-and disconnecting all pipes, hoses and electrical fittings at the firewall. 
-Care was taken to take better photos of the removal of parts so reassembly
-would not be as much a challenge second time around.
+ 
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{four-merlins-8.png}
-   %caption of the figure 
-   \caption*{\small \em Engine 2 with cowl panels removed, April 6, 2010.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.5]{four-merlins-2.png}
+%    %caption of the figure 
+%    \caption*{\small \em  Mike Hope and Bruce Gemmill assembled Prop 1ready to
+% install on Engine 1 October 26, 2008.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
 
-To remove the engine, a sling was attached to the lifting points on the engine,
-and a fork lift took the weight while four attachment bolts were removed from
-the firewall.  Keeping the engine level while it was slowly backed away from
-the aircraft was important, to avoid damage.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{four-merlins-9.png}
-   %caption of the figure 
-   \caption*{\small \em Engine 2 removed April 14, 2010.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
 
-The engine team made a quick job of disassembling the number 2 engine.  All
-major assemblies such as the intercooler and supercharger were removed, along
-with all pipes and hoses.  The engine was removed from the frame and installed
-on the rotatable engine stand.  The cylinder heads, cylinder blocks and pistons
-were removed, as well as the crankshaft.  These major engine components were
-cleaned so that the task of reassembling the engine could begin.  Disassembly
-was not easy.  After years outside exposed to the elements, several of the
-pistons were seized inside the cylinders.  Freeing these required a lot of
-muscle and Liquid Wrench.  Still, the disassembly of Nr 2 went much faster than
-the first engine.
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.55]{four-merlins-3.png}
+%    %caption of the figure 
+%    \caption*{\small \em Engine 1 assembled in the Conservation shop Feb 2,
+% 2010.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
 
-A lot of corrosion was removed by a process called glass beading, but
-volunteers needed to be careful not to damage aluminum surfaces or contaminate
-seals.  Most aluminum components were clearcoated to protect from further
-corrosion, while other parts were often painted with silver aluminum paint to
-restore the original look.
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.55]{four-merlins-4.png}
+%    %caption of the figure 
+%    \caption*{\small \em Firewall ready, auxiliary gearbox installed Jan 7,
+% 2010.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
 
-As with Engine 1, this engine was assembled in the rotating stand.  Shown
-below, volunteer Stan Ride is adjusting the torque on the main bearing caps.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{four-merlins-10.png}
-   %caption of the figure 
-   \caption*{\small \em Stan Rideout working to reassemble Engine 2 in engine
-shop, Oct 7, 2010.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
 
-By December 2010 many major components such as the engine block, crankshaft and
-pistons had been refurbished and re-assembled.  The experience gained from
-Number 1 engine paid off in spades.
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.55]{four-merlins-5.png}
+%    %caption of the figure 
+%    \caption*{\small \em Engine 1 complete at the Restoration Shop Feb 9, 2010
+% .}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
 
-The wiring harness was refurbished, but would not be installed until after the
-engine was in place.  This was a key lesson learned from engine Nr 1.  Some
-assemblies were installed too early, and had to be removed again so the engine
-was accessible.  This time, the crew assembled the Quick Engine Change  module
-from the inside out.  Pipes and hoses would only go on after major parts were
-in place.
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.45]{four-merlins-6.png}
+%    %caption of the figure 
+%    \caption*{\small \em Engine 1 installed Feb 24, 2010. Shown top left to
+% bottom right, engine
+% supervisor Ted Devey,  Bill Tate, Ron Lemieux, Giuseppe Zanetti, John Corby,
+% Garnet Chapman, Volunteer Project Manager Jim Riddoch, John Tasseron, Bruce
+% Gemmill, Museum Project Coordinator Mike Irvin, Charles Baril, and then
+% Association President Tim Timmins.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
 
-By March 2011 Nr 2 frame had been refurbished, and work was progressing on
-cowlings, radiators and accessories.  In the meantime all four propellers had
-been restored, by Hope Aero along with the four spinners. Three were installed
-back on the aircraft, while the fourth was stored until all four engines were
-completed.
 
-The Nr 2 engine was  re-assembled by April 2011. The crankshaft and pistons had
-been installed, along with the cylinder heads and valve train. Work was then
-take to restore the ignition wiring and the auxiliary gearbox. 
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{four-merlins-11.png}
-   %caption of the figure 
-   \caption*{\small \em Austin (Tim) Timmins.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
+% \paragraph*{Engine 2}\
 
-Although engine Nr 1 was installed on the North Star in February, 2010, it 
-continued to serve as a model for what engine Nr 2 should look like when
-completed.  Volunteers made numerous trips to the storage hangar to compare
-engine Nr 1 to the items currently then being restored.  This allowed the crew
-to solve several re-assembly problems quickly. The engine block was complete
-and the crankshaft, cylinder heads and pistons had  been installed by June
-2011. Many engine accessories and sub-assemblies had also been treated and were
-ready to be reattached. 
 
-The engine frame also received some attention.  The rear cowl ring that held
-several of the external panels was completely stripped and repaired before
-painting and re-assembly. The three radiators for the engine, intercooler and
-oil cooler were dismantled, cleaned and painted.  These three units were
-assembled and attached to the front of the engine frame.  The radiators were
-then filled with inhibiting oil to prevent corrosion.  There were many
-accessories that needed to be refurbished before being installed on the engine
-frame.  When completed, most of these items were stored until after the engine
-was installed in the frame.  This made assembly much easier.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{four-merlins-12.png}
-   %caption of the figure 
-   \caption*{\small \em Jim Riddoch and Bill Tate fill the radiators with
-inhibiting oil.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.5]{four-merlins-8.png}
+%    %caption of the figure 
+%    \caption*{\small \em Engine 2 with cowl panels removed, April 6, 2010.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
 
-The auxiliary gearbox, which is a complex piece of machinery, was reassembled,
-but the reduction gear that connects the propeller shaft to the engine proved
-to be difficult, due to excessive corrosion.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.7]{four-merlins-13.png}
-   %caption of the figure 
-   \caption*{\small \em Engine 2 on rotating assembly stand.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
 
-The cowl panels were rebuilt, as severe corrosion had affected many of the
-steel stiffeners riveted to the edges of the panels.  These had to be removed
-and refinished.  Several were so badly gone that new ones were fabricated and
-installed.  Once riveted in place, the stiffeners were painted and the outside
-of the panels polished to a high shine.  Again, these were stored until the
-engine assembly was complete, and then installed once all other assembly work
-was finished.
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.5]{four-merlins-9.png}
+%    %caption of the figure 
+%    \caption*{\small \em Engine 2 removed April 14, 2010.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
 
-By December 2011 the engine was nearly complete, with only a few sub-assemblies
-to be added.  The engine was installed in the engine frame and this allowed
-many pipes and hoses and electrical components to be added.  The supercharger
-was installed, which was another major milestone for the engine crew.  This
-went much quicker than installation on engine  Nr.1.  
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.45]{four-merlins-14.png}
-   %caption of the figure 
-   \caption*{\small \em  Engine Nr 2 being re-assembled in the engine shop.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
 
-Engine Nr. 2 was completed by March 2012, with all assemblies and most cowl
-panels in place.  A lot of detail work was needed to ensure all pipes, hoses,
-clamps and other items were all installed exactly where they were originally. 
-Quality control was important to ensure accuracy of the final assembly.  The
-auxiliary gearbox was installed on the firewall, so final preparations could be
-made  to install engine  Nr. 2 and the propeller, before the aircraft was moved
-outside for Canada Day.
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.5]{four-merlins-10.png}
+%    %caption of the figure 
+%    \caption*{\small \em Stan Rideout working to reassemble Engine 2 in engine
+% shop, Oct 7, 2010.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
 
-It is worth noting that while Engine 1 required more than four years to
-complete the restoration, Engine 2 was completed in just 2 years.
 
-Finally, after six years of work by a host of dedicated volunteers, both
-restores engines were once again fitted to the North Star by May 2012 as shown
-in the photo below.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{four-merlins-15.png}
-   %caption of the figure 
-  % \caption*{\small \em .}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.5]{four-merlins-11.png}
+%    %caption of the figure 
+%    \caption*{\small \em Austin (Tim) Timmins.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
 
-In our next edition we plan to tell the story of the restoration of engines 3
-and 4.
+
+
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.5]{four-merlins-12.png}
+%    %caption of the figure 
+%    \caption*{\small \em Jim Riddoch and Bill Tate fill the radiators with
+% inhibiting oil.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
+
+
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.7]{four-merlins-13.png}
+%    %caption of the figure 
+%    \caption*{\small \em Engine 2 on rotating assembly stand.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
+
+ 
+
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.45]{four-merlins-14.png}
+%    %caption of the figure 
+%    \caption*{\small \em  Engine Nr 2 being re-assembled in the engine shop.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
+
+
+
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.5]{four-merlins-15.png}
+%    %caption of the figure 
+%   % \caption*{\small \em .}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:tim}
+% \end{figure}
+
+
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
