--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,74 +10,73 @@
 
 \maketitle
 
-As always, before I start to write the Notes from the President, I reread my
-previous Notes to remind myself of what I had previously said in order to set
-the record straight if necessary. As I write this at the beginning of
-September, I am now aware of the impact of the COVID-19 pandemic on the
-restoration schedule for the North Star and the operations of your
-Association.
+Once again, we are experiencing summer with Covid restrictions in place and
+suspended North Star volunteer operations.  As I write this piece in the middle
+of July, we are seeing hopeful signs.  The Museum has reopened with reduced
+numbers of visitors and we are expecting to arrange an in person coffee morning
+in the middle of August for North Star volunteers outside or under the very
+large door of the Restoration hangar if the weather is bad.
 
-Since March, restoration work on the aircraft has been suspended and the
-activities of the Association have been limited. We have, however, been keeping
-in touch with each other through the weekly Zoom meeting organized by the
-Museum's volunteer co-coordinator C\'edric St.-Amour. This virtual meeting
-takes
-place every Thursday at 10 AM EST; it is open to all our volunteers and any
-other PNSAC members who would like to join in.
+The Museum is reopening cautiously, and it will be at least September before the
+North Star restoration can recommence.  Assuming that the Ontario Covid
+infections remain low and the Ontario government rules allow it, we would also
+like to have our AGM indoors in the fall.
 
-As previously reported, the North Star project reached a major milestone with
-the completion of the restoration of Engine \#4 which was moved into the
-reserve hangar on a cold December 2019 morning.
+This issue of the Chronicle is mainly about the completion of restoration of
+engines 3 and 4. Some of our volunteers, however, have been busy during the
+spring and early summer locating and acquiring a used North Star radar.  This
+has now been delivered to the Museum.  In the next issue of the Chronicle, we
+hope to have the story of how John Makadi and Chris McGuffin negotiated the
+purchase of the radar and arranged for its transportation to Ottawa from
+Springfield, Missouri.  Quite a story.
 
-Since we are unable to physically meet and there has been no restoration work
-carried out, we felt that a special issue of the NSTAR Chronicle devoted
-entirely to the 15 year restoration of all four of the Merlin engines would be
-of interest to members.
+The crate containing the radar has not yet been opened.  We are expecting to do
+this at the same time as we gather for our in person coffee morning in August.
+We will be donating the radar to the Museum since it will be installed in the
+restored North Star.
 
-Understandably, with a project which has taken many years. the volunteers
-working on the engines have changed over time. Some have retired or stopped
-volunteering and sadly, some have died. Earlier this year we asked Ted Devey to
-contribute a piece but before writing about of his work, he passed away. Ted
-was involved with restoring all the engines and for several of the early years
-was the volunteer leading the restoration team. Ted was a great raconteur and
-our oldest volunteer at 93 years old. His recollections would have added
-considerably to the interest of this special issue of the NSTAR
-Chronicle.
+The used radar and its transportation costs have been financed in a very
+pleasant but unexpected way.  Earlier in the year, our Membership Secretary,
+Bruce Gemmill, at the request of the Board of Directors sent a message to all
+our members saying that for the year 2020/2021 the annual membership dues of
+\$25 would be cancelled and anyone who was a paid-up member in 2020 would
+continue their membership for another year.  The Board decided to do this
+because our members have received very little during the pandemic in return for
+their support and membership.  
 
-After much consideration, the Museum has decided that volunteering cannot
-restart before January 2021. Until then we will continue with our regular Zoom
-meetings and will also organize a virtual Annual General Meeting for the
-Association. We will also continue to provide updates on the situation and much
-will depend upon how the different levels of government handle the ongoing
-recovery from the pandemic.
+Members will have been surprised to receive the letter from Bruce, which as
+always included a form for making donations.  Bruce decided that he would use a
+large number of unused small denomination postage stamps he had collected over
+many years.  As a result, all the letters had a rainbow of stamps affixed to
+them.  Bruce will have had a very dry mouth when he finished attaching all the
+stamps. A really nice idea by Bruce.
 
-There is an old saying "That it is an ill wind that blows nobody any good."
-This is very true even of this pandemic. One of the very pleasant results is
-having conversations with PNSAC members who don' t reside in the National
-Capital area and have sent membership renewals by mail. Where a renewal has
-been received and confirmation has been delayed as a result of the pandemic, I
-try to call a member on the telephone to explain what is happened and that the
-renewal has not been lost. As a result I have had many interesting phone calls
-with people whom I have never spoken to before. A definite bonus for me.
+Although Bruce's letter did not specifically ask for donations, many of our
+members decided to make donations to the project.  As a result we received over
+\$2000 in donations we were not expecting.  The receipt of these donations
+coincided with the decision to purchase the used radar from Missouri.  Although
+the final cost of the purchase and transportation of the radar has not been
+determined at the time of writing these notes, we are sure that the donations
+received as a result of Bruce's letter will probably cover the full cost of the
+acquisition.
+
+Throughout this pandemic, Cedric St Amour, our Volunteer Coordinator, has every
+Thursday morning hosted a Zoom virtual coffee morning.  This is normally
+attended by six or seven people and remains open to all volunteers and members.
+Anybody who has not been onto this meeting and would like to do so can contact
+me at \email{president@projectnorthstar.ca}. I will then send the necessary
+login information to you.
+
+As we gradually get ready for recommencing volunteer work on the Northstar, we
+will be talking with R\'{e}j Demers, CASM Special Project Manager, to organise a
+workplan for the next few months, particularly in view of the fact that
+restoration work on all four engines has mainly been completed.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
 \end{footnotesize}
 
 \end{multicols}
-
-
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.78]{north_star_welcome_1.png}
-   %caption of the figure 
-%   \caption*{\small \em  Mike Hope and Bruce Gemmill assembled Prop 1ready to
-%install on Engine 1 October 26, 2008.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:tim}
-\end{figure}
 
 \begin{multicols}{2}
 
