--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -17,7 +17,7 @@
 % Note: Need to include amsmath before PNSAC, because the latter redefines the
 % equation environment.
 \usepackage{../PNSAC} 
-\usepackage[round]{natbib}
+% \usepackage[round]{natbib}
 % To control float placement
 \usepackage{stfloats}
 \usepackage{float}
@@ -48,9 +48,9 @@
 
 \begin{document}
 
-\volume{16} % \volnumber{1}
-\issue{2}
-\date{September 2020} 
+\volume{17} % \volnumber{1}
+\issue{1}
+\date{August 2021} 
 \titlepage
 
 %\centerline {\Large \textit {Celebrating the 70th Anniversary of the First
@@ -77,18 +77,18 @@
 \pagebreak
 
 % Special
-\begin{article}
-	\input{article_Special} 
-\end{article}
+% \begin{article}
+% 	\input{article_Special} 
+% \end{article}
 
 %\pagebreak
 
 % Progress report ................................................... %
 
 % Report
-\begin{article}
-	\input{article_ProgReport} 
-\end{article}
+% \begin{article}
+% 	\input{article_ProgReport} 
+% \end{article}
 
 \pagebreak
 
@@ -113,16 +113,16 @@
 \pagebreak
 
 % Feature article
-\begin{article}                 
-	\input{article_Feature2} 
-\end{article}
+% \begin{article}                 
+% 	\input{article_Feature2} 
+% \end{article}
 
 \pagebreak
 
 % Feature article
-\begin{article}
-	\input{article_Feature3} 
-\end{article}
+% \begin{article}
+% 	\input{article_Feature3} 
+% \end{article}
 
 %\pagebreak
 
