--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -5,9 +5,188 @@
 % Head
 
 \title{Our Members}
-% \author{Interview with Garry Dupont}
+\author{This is the edited transcript of an interview with Garry Dupont by Richard Lodge.}
 
 \maketitle
+
+\textit{Garry why did you join Project North Star?}
+
+I joined it when I was working full time and it was a discussion between me and
+my wife as I knew retirement was looming and it was what I was going to do. I
+had seen the article that was in the Ottawa Citizen with Robert Holmgren and Tim
+Timmins requesting people to attend a meeting starting the project, and my wife
+suggested I go to it, which I did and it gave me something to look forward to.
+Even when I was employed I was able to physically contribute by coming in the
+odd day and helping out with special projects and overhaul a few components and
+stuff like that.\\
+
+\noindent\textit{So you worked only in the engine shop?}
+
+No.  When initially I was working, I worked on various other things and only
+after I fully retired, I showed up and said Mike Irvin "I am here. I'll be here
+for four days a week".  That's when he asked me to go into the engine shop
+because they needed help in there.\\
+
+\noindent\textit{Could you have worked anywhere but you chose to work in the engine shop?}
+
+Actually, Mike chose for me.  Mike was the one who said go to the engine shop.\\
+
+\noindent\textit{When you started with Project North Star would you have felt
+that you had most experience of aviation work on engines, or could you gone
+anywhere on the plane?}
+
+I could have gone anywhere on the plane. Of this particular engine I had no
+knowledge. I had never worked on these liquid cooled engines before.  I never
+worked on a piston engine of that size before and actually I hadn't worked on
+piston engines for quite a number of years because with my employment most of my
+airplanes were with turbines.  We had some small piston engined airplanes of
+which I had limited experience.\\
+
+\noindent\textit{So quite a bit of your work in the engine shop was a learning
+experience apart from learning about how the Merlin 622 was assembled, you were
+also learning a bit about actually working on a large piston engine aircraft?}
+
+That's correct and the systems on this particular engine were completely
+different from anything I had ever worked on and I came across  an RCAF training
+manual, which somebody had donated and I took it home and read it from one end
+to the other over a couple of weeks. I was able to learn a considerable amount
+about the engine and understand the systems and it started making sense to me,
+so when you start assembling and disassembling and you look at a line you know
+what that the line is for. You know what the electrical connections are for. You
+know what system they belong to so it makes that part of the process much
+easier.\\
+
+\noindent\textit{I know from when we first started working together, you said
+you worked for Perimeter Airlines in Winnipeg.  When you were working for
+Perimeter, you were working mostly on Metroliners. Correct?}
+
+Yes.  We had 2 Metroliners when I was there, but we also had 4 piston operated
+Beechcraft Queenairs, we had 6 other Beechcraft.\\
+
+\noindent\textit{When you worked at Perimeter, were you working on any part of
+the plane and you weren't specialising in any particular part, so moving into
+solely engines was really a new area of work for you?}
+
+That's correct.\\
+
+\noindent\textit{When you first started working in the engine shop, who were you
+working with?}
+
+There was Ted Devey, John Tasseron, Michel Lacasse and two other
+fellows, the names escape me.\\
+
+\noindent\textit{I asked a few minutes ago.  If you were only interested in
+working on the engines.  Where else would you like to work on the plane? So you worked only in the engine shop?}
+
+Anything actually, I don't do well with sheet metal work, I have done some,
+minor bits. I could develop those skills a bit better.  Hydraulic systems; I
+have a fairly good interest in, landing gear, the flaps, the hydraulics and all
+those systems.  I have learned where the pumps are and how all that works now.
+I have also read up little bit on the landing gear to understand it a bit better
+and how it works and that would be interesting.\\
+
+\noindent\textit{So you could, if they had been doing the landing gear at the
+time you started have been quite interested in working on that side of things?}
+
+Yes.\\
+
+\noindent\textit{What would you say in retrospect was the most difficult part of
+the work you were having to do on engines 3 and 4?  Was it lack of paperwork,
+was it corrosion or what was it?}
+
+The most difficult part was dealing with corrosion because of the amount of
+corrosion in the engine and also the decision-making between my career and what
+I would do and what the museum wanted in restoration. The hardest learning part
+was learning about restoration and how to do it properly. I have had some good
+mentors.  and I have learned fairly well on what is required to do and what to
+look forward to in the future when planning the project; how to tackle it from a
+restoration perspective rather than a maintenance perspective.\\
+
+\noindent\textit{Was Mike Irvin one of your mentors helping you to know the
+various procedures needed for restoration?}
+
+Yes, Mike was the main mentor.  He was the one that took me under his wing and
+showed me the requirements and the basis of doing restoration.\\
+
+\noindent\textit{When you started working there, you weren't really in charge of
+the engine because it was a combination of you and Ted Devey who was still
+working there and who had worked on engines 1 and 2.  So you were working with
+him under Mike Irvin?}
+
+Yes.  That's right.\\
+
+\noindent\textit{You feel one of the most difficult parts was to make the shift
+from keeping an aircraft flying to restoring and conserving everything?}
+
+That's right, yes.\\
+
+\noindent\textit{Having done that and got into that sort of mindset, what would
+you feel was the most difficult part of doing the engine, of restoring the
+engines that you had to be involved with, or you had to work with.  Which part,
+I am thinking of?}
+
+The biggest part with the engines was the cleaning.  Believe it or not, the
+engines and the old oil had been sitting there for 35 years, it was very
+congealed and very difficult to remove.  Cleaning with solvents is not a
+pleasant thing to do and that was about the only method we could use was to
+clean and put it in the parts washer.  Once you put a part in the parts washer
+you also had to be very careful because if it was steel, when it was removed
+from the part washer it would flash freeze almost immediately, so it had to be
+removed and treated straightaway with some sort of preserving oil to prevent the
+surface from oxidizing.\\
+
+\noindent\textit{I very much remember John Tasseron working on the pistons and
+all work of getting the pistons out of the block  and then John working on the
+cleaning the piston rings.  Were you very much involved in that side of things?}
+
+Yes.  Cleaning up the piston rings was a real tedious job where you could spend
+a whole week on one piston ring trying to free it up by scraping away the
+corrosion, by tapping it to free the rings.  Sadly, a lot of them broke.  There
+was nothing we could do to free them up.  We tried various chemicals, soaking
+procedures, vibration procedures, putting them in sonic cleaners so that the
+vibration would free up the dirt, but nothing seemed to work really well, except
+getting in there with a little scraper and trying to scrape them clean.\\
+
+\noindent\textit{And when you did manage to free the parts and get them clean,
+you couldn't use a glass bead machine to do any cleaning because the parts were
+aluminum so we had to use Scotch Brite and other things to clean them?}
+
+Correct.  The purpose of glass beading is to remove corrosion and not to clean.
+If you glass bead a surface, it changes the outer texture of it considerably. In
+the engine shop we had at Perimeter, the only time they used glass beading was
+for removing the outside surface of the engine block and then they could prepare
+it for painting.\\
+
+\noindent\textit{Now that you have finished the main part of the work on engines
+3 and 4, what are the main additional parts or work still to be done on engines
+3 and 4 and maybe on engines 1 and 2?}
+
+R\'{e}j [Demers] wants to remove the engines so we will reinstall engine 4 when
+it is ready and then we will go back and will work on each engine successively
+and then work on the firewall and behind the firewall with the engine removed.
+At the time when we do this we will inspect the engines to see if corrosion has
+come back in some areas and I notice on some of the engines during Canada Day
+when we removed parts and cowlings to display the engine that there was
+corrosion showing up in certain areas where it had not been treated properly.
+So when we remove the engines, and R\'{e}j agrees with me, we will put them back
+in the engine shop and go over them thoroughly.  We have also found some issues
+with some of the cowl parts just not being adjusted properly.  So in the end, I
+would like to have all four engines installed on the wings properly treated so
+that we don't have to worry about them again and also the cowls adjusted and
+done properly so that at any time we can remove the cowl parts and reinstall
+them with ease.  So that in the future, if you want to display the engine again,
+you could effectively remove all the cowls on all four engines with ease and
+then reinstall them without making any big issue of it.\\
+
+\noindent\textit{Effectively you have got to remove any distortions in the cowl
+panels. So those are the things to be done?  When you are finished working on
+the Merlin engines, what would you like to do?  This is purely a personal thing
+and nothing to do with the Museum.  More engines on a different plane or working
+on the airframe?}
+
+It really doesn't matter to me, whatever the Museum sees fit as a project, I am
+willing to tackle it. 
+
 
 % \end{multicols}
 
@@ -22,100 +201,7 @@
 
 % \begin{multicols}{2}
 
-Readers of the Chronicle will know that this item usually refers to one of our
-members. This edition, however, salutes all of our members who worked as
-volunteers on the restoration of the North Star engines namely:
 
-\begin{itemize}
-  \item Charles Baril
-  \item John Corby (deceased)
-  \item Ted Devey (deceased)
-  \item Ed Hogan
-  \item Peter Houston
-  \item Ron Lemieux
-  \item Richard Lodge
-  \item Wib Neal
-  \item Jim Riddoch
-  \item Stan Rideout
-  \item Ted Slack
-  \item John Tasseron
-  \item Bill Tate
-  \item Tim Timmins (deceased)
-  \item Giuseppe Zanetti
-\end{itemize}
-
-The following members have provided comments on their personal experiences.
-
-\textbf{Charles Baril}
-
-Working on all 4 Merlin engines has been an extremely rewarding experience that
-has taught me a lot about older technology, an appreciation for history
-involved (and those in the engine crew with that knowledge) and learning new
-skills and techniques. Although most of the parts were auxiliary systems,
-seeing them as part of the full engine gives a sense of accomplishment. It is
-very satisfying to see a part going from the dirty, oil covered, rusty part to
-newly refurbished one that looked like it was overhauled in an RCAF maintenance
-depot. It has been an honour to be part of this project and restoration of
-these pieces of history.
-
-In particular I remember working on the lower cowling flaps.  Trying to undo
-the inner skin was difficult due to longer rivets through the mounts for the
-Flaps. It took several tries and a few extra holes, but it was done. Fixing
-those holes often meant using original methods which was revealing and a
-commitment to historical methods.
-
-I also recall the work on the filter ducts.  The filter duct is the last stage
-of the air intake before the supercharger. During its cleaning, there was a
-starling nest on top of one filter. This caused a lot of corrosion damage that
-needed to be removed and treated. Yet, what got me was that starlings could get
-that far into the engine.
-
-\textbf{Richard Lodge}
-
-As probably the only volunteer who ever worked in the Aero Engine Division of
-Rolls-Royce in Derby, England, I was greatly interested in becoming involved in
-Project North Star, even though, as an accountant, I had never worked on the
-design or building of an aeroengine.  By the time I started work at Rolls-Royce
-in 1963, new build of Merlin engines had ceased, and only spare parts were
-being manufactured.
-
-I have several strong memories of working on the Merlin engine.  In general,  I
-particularly remember John Tasseron working endlessly on freeing seized piston
-rings.  I learned much from John about patiently working at something which
-appeared to be impossible! Later, when working with  R\'{e}j Demers and Garry
-Dupont, I started to learn how to rivet and how to lock wire. The most
-important lesson for me has been, photograph, photograph, photograph, at each
-stage of dismantling, cleaning and reinstalling an engine part. When sitting in
-an overcrowded office at Rolls-Royce, it never occurred to me that at some time
-in the future I would actually be working on a Merlin engine or working my way
-through an original parts manual to work out how to reassemble an item.  Life
-is certainly full of interesting surprises.
-
-\textbf{John Tasseron}
-
-The list below is intended to give a brief overview of the various highlights
-that arose during my participation in the restoration of the second, third and
-fourth Merlin engines:
-
-\begin{enumerate}
-  \item It's not every day one gets the opportunity to see up close what makes
-the Rolls-Royce 620 Series Merlin engine tick!
-  \item It's a real challenge to safely lower each "power egg" down off the
-wing, place it in "the big blue stand" and move it in to the workshop.
-  \item Then starts the process of carefully separating about 11,000 individual
-parts before cleaning, inspecting and re-conditioning them as necessary. Do not
-lose any and make sure everything is photographed for museum records!
-  \item When things unexpectedly go wrong, the real expertise kicks in to
-perhaps develop a repair scheme or even manufacture a brand-new replacement
-part. The objective is to bring everything back together again and end up with
-a "like new" engine, ready for preservation.
-  \item It all takes team effort based on effective communication and
-co-operation. There are no dumb questions and the answers are all aimed at the
-challenge to create an "airworthy" product that will never fly.
-  \item Finally, its important and fun to share the project with a curious
-public, so be ready to answer any questions that might be asked about the
-aircraft and its engines!
-\end{enumerate}
 
 
 
